@@ -1,5 +1,10 @@
 2005-09-17  Sven Panne  <sven.panne@aedion.de>
 
+	* configure.ac, admin/alut.vcproj, include/AL/alut.h: Use
+	AL_ALUT_H instead of _AL_ALUT_H, macros starting with "_" are
+	reserved by the C standard. For the same reason, rename _ALUTLIB
+	to ALUT_BUILD_LIBRARY.
+
 	* README: Added building instructions using VisualStudio.
 
 	* admin/.cvsignore: Ignore files generated by VisualStudio.
